syntax = "proto3";

option go_package = "gateway/proto";

package order;

message Order {
  message OrderCatalog {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    uint32 quantity = 5;
  }

  string id = 1;
  bytes createdAt = 2;
  string accountId = 3;
  double totalPrice = 4;
  repeated OrderCatalog catalogs = 5;
}

message CreateOrderRequest {
  message OrderCatalog {
    string catalogId = 2;
    uint32 quantity = 3;
  }

  string accountId = 2;
  repeated OrderCatalog catalogs = 4;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message GetOrdersForAccountRequest {
  string accountId = 1;
}

message GetOrdersForAccountResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {
  }
  rpc GetOrdersForAccount (GetOrdersForAccountRequest) returns (GetOrdersForAccountResponse) {
  }
}